Add Hugo specific gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
-# Hugo default output directory
-/public
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 
-## OS Files
-# Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
+# Test binary, built with `go test -c`
+*.test
 
-# OSX
-.DS_Store
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Hugo specific
+.hugo_build.lock
