--- a/config.yaml
+++ b/config.yaml
@@ -13,7 +13,7 @@ enableRobotsTXT: false
 # Site Params
 title: "Alexis La Porte: Web Developer"
 params:
-  email: alexis@alexislaporte.com
+  email: aklaporte@gmail.com
   description: > # this means to ignore newlines until "baseurl:"
     My personal tech website.
   author: Alexis La Porte
